# SimpleAI

./: .gitignore  CMakeLists.txt  Doxyfile
cmakemodules/: FindOpenBLAS.cmake
docs/html/: _abstract_network_8hpp_source.html  _concepts_8hpp.html  _concepts_8hpp.js  _concepts_8hpp__dep__incl.map  _concepts_8hpp__dep__incl.md5  _concepts_8hpp__incl.map  _concepts_8hpp__incl.md5  _concepts_8hpp_source.html  _i_network_8cpp.html  _i_network_8cpp__incl.map  _i_network_8cpp__incl.md5  _i_network_8hpp.html  _i_network_8hpp.js  _i_network_8hpp__dep__incl.map  _i_network_8hpp__dep__incl.md5  _i_network_8hpp__incl.map  _i_network_8hpp__incl.md5  _i_network_8hpp_source.html  _list_8hpp_source.html  _matrix_8hpp_source.html  _network_8cpp.html  _network_8cpp__incl.map  _network_8cpp__incl.md5  _network_8hpp.html  _network_8hpp__dep__incl.map  _network_8hpp__dep__incl.md5  _network_8hpp__incl.map  _network_8hpp__incl.md5  _network_8hpp_source.html  _neuron_8cpp.html  _neuron_8cpp__incl.dot  _neuron_8hpp.html  _neuron_8hpp__dep__incl.dot  _neuron_8hpp_source.html  _utilities_8cpp.html  _utilities_8cpp__incl.map  _utilities_8cpp__incl.md5  _utilities_8hpp.html  _utilities_8hpp__dep__incl.map  _utilities_8hpp__dep__incl.md5  (+102 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  related_0.js  search.css  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  (+1 more)
example/: CMakeLists.txt  main.cpp
example/include/: AbstractTeacher.hpp  ITeacher.hpp  Teacher.hpp
example/src/: AbstractTeacher.cpp  ITeacher.cpp  Teacher.cpp
src/: CMakeLists.txt  main.cpp
src/include/AI/: Network.hpp  Neuron.hpp
src/include/SimpleAI/: AbstractNetwork.hpp  Concepts.hpp  INetwork.hpp  Network.hpp  Teacher.hpp  Utilities.hpp
src/include/SimpleAI/Domains/: Concepts.hpp  List.hpp  Matrix.hpp
src/src/: AbstractNetwork.cpp  INetwork.cpp  Network.cpp  Neuron.cpp  Teacher.cpp  Utilities.cpp
src/src/Domains/: Concepts.cpp  List.cpp  Matrix.cpp
tests/: CMakeLists.txt
tests/Assets/: Serialize_test
tests/Fixations/Network/: NetworkF.cpp  NetworkF.hpp
tests/TestCases/: DefaultCase.cpp  NetworkCase.cpp  RandomCase.cpp  SerializationCase.cpp  TeacherCase.cpp
tests/include/: NetworkTest.hpp
tests/src/TestCases/: DefaultCase.cpp
